--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -18,7 +18,7 @@ spec:
       sink:
         udsink:
           container:
-            image: simple-sink-logger:latest  # Updated image tag
+            image: my-sink:v0.0.2
             imagePullPolicy: Never
 
   edges:
