working logger locally
Signed-off-by: jacque1ine <js3fung@uwaterloo.ca>

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
+HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-
-### IntelliJ IDEA ###
-.idea/*
-*.iml
-
 
 ### Eclipse ###
 .apt_generated
@@ -16,6 +12,12 @@ target/
 .settings
 .springBeans
 .sts4-cache
+
+### IntelliJ IDEA ###
+.idea/*
+*.iws
+*.iml
+*.ipr
 
 ### NetBeans ###
 /nbproject/private/
@@ -29,7 +31,3 @@ build/
 
 ### VS Code ###
 .vscode/
-.qodo
-
-### Mac OS ###
-.DS_Store
