--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea/*
+*.iml
+
 
 ### Eclipse ###
 .apt_generated
@@ -12,12 +16,6 @@ target/
 .settings
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
-.idea/*
-*.iws
-*.iml
-*.ipr
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,3 +29,7 @@ build/
 
 ### VS Code ###
 .vscode/
+.qodo
+
+### Mac OS ###
+.DS_Store
