--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,6 @@
             <artifactId>spring-boot-starter-pulsar</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.numaproj.numaflow</groupId>
             <artifactId>numaflow-java</artifactId>
             <version>0.9.0</version>
@@ -71,7 +67,7 @@
                                 <image>amazoncorretto:17</image>
                             </from>
                             <container>
-                                <mainClass>com.numaproj.pulsar.SpringPulsarApplication</mainClass>
+                                <mainClass>com.numaproj.pulsar.PulsarApplication</mainClass>
 
                             </container>
                             <to>
