--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
     client:
       service-url: pulsar://host.docker.internal:6650
     producer:
-      topic-name1: demo-topic
+      topic-name: demo-topic
