--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -20,6 +20,17 @@ spec:
           container:
             image: my-sink:v0.0.3
             imagePullPolicy: Never
+            env:
+              - name: PULSAR_SERVICE_URL
+                valueFrom:
+                  configMapKeyRef:
+                    name: pulsar-config
+                    key: service-url
+              - name: PULSAR_TOPIC_NAME
+                valueFrom:
+                  configMapKeyRef:
+                    name: pulsar-config
+                    key: topic-name
 
   edges:
     - from: in
