got topicName to work
Signed-off-by: jacque1ine <js3fung@uwaterloo.ca>

--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -9,7 +9,7 @@ data:
         client:
           service-url: "pulsar://host.docker.internal:6650"
         producer:
-          topic-name: "test-topic"
           producerConfig:
+            topicName: "test-config-topic" 
             producerName: "test-producer"
             sendTimeoutMs: 2000
