--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -18,7 +18,7 @@ spec:
       volumes: #shared between containers that are aprt of the same pod, useful for sharing configurations
         - name: pulsar-config-volume
           configMap:
-            name: pulsar-producer-config #creating volume based on pulsar-produver-config 
+            name: pulsar-config #creating volume based on pulsar-config 
             items:
               - key: application.yml
                 path: application.yml
