--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -15,7 +15,7 @@ spec:
         builtin:
           name: cat
     - name: out
-      volumes: #shared between containers that are part of the same pod, useful for sharing configurations
+      volumes: # Shared between containers that are part of the same pod, useful for sharing configurations
         - name: pulsar-config-volume
           configMap:
             name: pulsar-config 
@@ -26,7 +26,7 @@ spec:
         udsink:
           container:
             image: my-sink:v0.0.3
-            args: [ "--spring.config.location=file:/conf/application.yml" ] # use external configuration file 
+            args: [ "--spring.config.location=file:/conf/application.yml" ] # Use external configuration file 
             imagePullPolicy: Never
             volumeMounts:
               - name: pulsar-config-volume
