--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -10,6 +10,7 @@ data:
           clientConfig:
             serviceUrl: "pulsar://host.docker.internal:6650"
         producer:
+          enable: True
           producerConfig: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-producer
             topicName: "test-config-topic" 
             producerName: "test-producer"
