--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -11,6 +11,6 @@ data:
             serviceUrl: "pulsar://host.docker.internal:6650"
         producer:
           producerConfig: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-producer
-            # topicName: "test-config-topic" 
+            topicName: "test-config-topic" 
             producerName: "test-producer"
             sendTimeoutMs: 2000
