feat: add configurations and implement simple source (#14)
Signed-off-by: jacque1ine <js3fung@uwaterloo.ca>
Co-authored-by: Keran Yang <yangkr920208@gmail.com>

--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -6,10 +6,14 @@ data:
   application.yml: |
     spring:
       pulsar:
+      
         client: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
           clientConfig:
             serviceUrl: "pulsar://host.docker.internal:6650"
         producer:
-          producerConfig: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-producer
-            topicName: "test-config-topic" 
-            sendTimeoutMs: 2000
+          enabled: false
+        consumer: 
+          enabled: true
+
+
+
