--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -4,9 +4,11 @@ metadata:
   name: simple-pipeline
 spec:
   limits: 
-    readBatchSize: 10
+    readBatchSize: 6
   vertices:
     - name: in
+      scale:
+        min: 1
       volumes: # Shared between containers that are part of the same pod, useful for sharing configurations
         - name: pulsar-config-volume
           configMap:
