--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -15,7 +15,7 @@ data:
         consumer: 
           enabled: true
           consumerConfig: 
-            topicNames: "test-topic"
+            topicNames: "marchten"
             subscriptionName: "sub"
 
 
