--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -14,6 +14,11 @@ data:
           enabled: false
         consumer: 
           enabled: true
+          consumerConfig: 
+            topicNames: "marchten"
+            subscriptionName: "sub"
+
+
 
 
 
