--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,23 @@
                 </configuration>
             </plugin>
             <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.22.0</version>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.maven.surefire</groupId>
+					<artifactId>surefire-junit4</artifactId>
+					<version>2.22.0</version>
+				</dependency>
+			</dependencies>
+			<configuration>
+				<includes>
+					<include>**/*.java</include>
+				</includes>
+			</configuration>
+		</plugin>
+            <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>3.3.0</version>
