feat: introduce pulsar admin config (#27)
Signed-off-by: Jacqueline Fung <fungjsl@gmail.com>

--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -6,7 +6,6 @@ data:
   application.yml: |
     spring:
       pulsar:
-      
         client: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
           clientConfig:
             serviceUrl: "pulsar://host.docker.internal:6650"
@@ -16,8 +15,6 @@ data:
           enabled: true
           consumerConfig: 
             topicNames: "marchtwelve"
-
-
-
-
-
+        admin: 
+          adminConfig: # Accepts the same key-value pair configurations as pulsar client: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
+            serviceUrl: "http://host.docker.internal:8080/"
