add docs for consumer
Signed-off-by: jacque1ine <js3fung@uwaterloo.ca>

--- a/docs/source/byte-array/manifests/byte-arr-consumer-config.yaml
+++ b/docs/source/byte-array/manifests/byte-arr-consumer-config.yaml
@@ -11,12 +11,12 @@ data:
             serviceUrl: "pulsar://host.docker.internal:6650" # aka brokerServiceUrl
         producer:
           enabled: false
-        consumer: 
+        consumer:  # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-consumer
           enabled: true
           consumerConfig: 
-            topicNames: 
-            - 1
-            - "ho"
+            topicNames: "tester"
+            subscriptionName: "test-subscription" 
+            subcriptionInitialPosition: "Earliest" # or "Latest" --> change this
         admin: 
           adminConfig: # Accepts the same key-value pair configurations as pulsar client: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
             serviceUrl: "http://host.docker.internal:8080/" # aka webServiceUrl
