--- a/docs/source/byte-array/manifests/byte-arr-consumer-pipeline.yaml
+++ b/docs/source/byte-array/manifests/byte-arr-consumer-pipeline.yaml
@@ -4,17 +4,13 @@ metadata:
   name: simple-pipeline
 spec:
   limits: 
-    readBatchSize: 1
-  watermark:
-    idleSource:
-      threshold: 5s # The pipeline will be considered idle if the source has not emitted any data for given threshold value.
-      incrementBy: 3s # If source is found to be idle then increment the watermark by given incrementBy value.
-      stepInterval: 2s # If source is idling then publish the watermark only when step interval has passed.
+    readBatchSize: 1 # CHANGE THIS
+    readBatchTimeout: "30s" # CHANGE THIS
   vertices:
     - name: in
       scale:
         min: 1
-      volumes: # Shared between containers that are part of the same pod, useful for sharing configurations
+      volumes: 
         - name: pulsar-config-volume
           configMap:
             name: pulsar-config 
@@ -25,7 +21,7 @@ spec:
         udsource: 
           container:
             image: apache-pulsar-java:v0.3.0
-            args: [ "--spring.config.location=file:/conf/application.yml" ] # Use external configuration file 
+            args: [ "--spring.config.location=file:/conf/application.yml" ]
             imagePullPolicy: Never
             volumeMounts:
               - name: pulsar-config-volume
@@ -35,7 +31,7 @@ spec:
         min: 1
       udf:
         builtin:
-          name: cat # A built-in UDF which simply cats the message
+          name: cat
     - name: out
       scale:
         min: 1
