--- a/pulsar-config-map.yaml
+++ b/pulsar-config-map.yaml
@@ -14,7 +14,9 @@ data:
         consumer: 
           enabled: true
           consumerConfig: 
-            topicNames: "tester"
+            topicNames: 
+            - 1
+            - "ho"
         admin: 
           adminConfig: # Accepts the same key-value pair configurations as pulsar client: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
             serviceUrl: "http://host.docker.internal:8080/" # aka webServiceUrl
