--- a/docs/sink/byte-array/manifests/byte-arr-producer-config.yaml
+++ b/docs/sink/byte-array/manifests/byte-arr-producer-config.yaml
@@ -1,3 +1,4 @@
+# JWT Token example
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -8,8 +9,10 @@ data:
       pulsar:
         client: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
           clientConfig:
-            serviceUrl: "pulsar://host.docker.internal:6650"
+            serviceUrl: "insert pulsar+ssl:// ...." # brokerServiceUrl here 
+            authPluginClassName: org.apache.pulsar.client.impl.auth.AuthenticationToken
+            authParams: "insert token" # add JWT token here
         producer:
-          producerConfig: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-producer
-            topicName: "test-config-topic" 
-            sendTimeoutMs: 2000
+          enabled: true
+          producerConfig: 
+            topicName: "persistent://public/default/three"
