--- a/docs/sink/byte-array/manifests/jwt-token/byte-arr-producer-config.yaml
+++ b/docs/sink/byte-array/manifests/jwt-token/byte-arr-producer-config.yaml
@@ -15,4 +15,4 @@ data:
         producer:
           enabled: true
           producerConfig: 
-            topicName: "persistent://public/default/three"
+            topicName: "persistent://public/default/test-topic"
