produce to a topic with a schema

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.5'
 
 services:
   pulsar:
@@ -6,6 +5,9 @@ services:
     command: bin/pulsar standalone
     environment:
       PULSAR_MEM: "-Xms512m -Xmx512m -XX:MaxDirectMemorySize=1g"
+    volumes:
+      - ./schema.avsc:/pulsar/schemas/schema.avsc
+
 
     ports:
       - "6650:6650"
