--- a/consumer-config.yaml
+++ b/consumer-config.yaml
@@ -12,8 +12,7 @@ data:
         consumer:
           enabled: true
           consumerConfig: # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-producer
-            topicNames: "twentyfour" 
-            subscriptionName: "sub"
+            topicNames: "tester-tester" 
         admin: 
           adminConfig: # Accepts the same key-value pair configurations as pulsar client: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
             serviceUrl: "http://host.docker.internal:8080"
