added k8 secrets, edited some setup docs

--- a/docs/sink/byte-array/manifests/api-key/byte-arr-producer-pipeline.yaml
+++ b/docs/sink/byte-array/manifests/api-key/byte-arr-producer-pipeline.yaml
@@ -24,6 +24,12 @@ spec:
             image: apache-pulsar-java:v0.3.0 # TO DO: Replace with quay.io link
             args: [ "--spring.config.location=file:/conf/application.yml" ] # Use external configuration file 
             imagePullPolicy: Never
+            env:
+              - name: PULSAR_AUTH_TOKEN
+                valueFrom:
+                  secretKeyRef:
+                    name: pulsar-producer-auth-secret
+                    key: pulsar-token
             volumeMounts:
               - name: pulsar-config-volume
                 mountPath: /conf
