upgrade to java 23, remove JVM flags, make k8 secret env config more flexible

--- a/docs/sink/byte-array/manifests/api-key/byte-arr-producer-config.yaml
+++ b/docs/sink/byte-array/manifests/api-key/byte-arr-producer-config.yaml
@@ -12,6 +12,7 @@ data:
             serviceUrl: "insert pulsar+ssl:// ...." # brokerServiceUrl here 
             authPluginClassName: org.apache.pulsar.client.impl.auth.AuthenticationToken
             authParams: "${PULSAR_AUTH_TOKEN}" 
+            # operationTimeoutMs: "${PULSAR_OPERATION_TIMEOUT_MS}" 
         producer:
           enabled: true
           producerConfig: 
