--- a/docs/source/byte-array/manifests/api-key/byte-arr-consumer-secret.yaml
+++ b/docs/source/byte-array/manifests/api-key/byte-arr-consumer-secret.yaml
@@ -6,4 +6,11 @@ metadata:
   name: pulsar-consumer-auth-secret
 type: Opaque
 stringData:
-  pulsar-token: "YOUR-API-KEY-HERE"
+  # API Token Authentication (StreamNative Cloud, DataStax Astra, self-hosted with tokens)
+  PULSAR_AUTH_TOKEN: "YOUR-API-KEY-HERE"
+  
+  # Add more credentials as needed (all become environment variables):
+  # PULSAR_OAUTH_CLIENT_ID: "your-client-id"
+  # PULSAR_OAUTH_CLIENT_SECRET: "your-client-secret"
+  # PULSAR_SASL_USERNAME: "admin"
+  # PULSAR_SASL_PASSWORD: "admin-secret"
