--- a/docs/sink/byte-array/manifests/api-key/byte-arr-producer-secret.yaml
+++ b/docs/sink/byte-array/manifests/api-key/byte-arr-producer-secret.yaml
@@ -1,9 +1,16 @@
-# Pulsar Authentication Secret for Producer
-# This secret stores the API key/token used to authenticate with Pulsar/StreamNative
+# Pulsar Producer Authentication Secret
 apiVersion: v1
 kind: Secret
 metadata:
   name: pulsar-producer-auth-secret
 type: Opaque
 stringData:
-  pulsar-token: "YOUR-API-KEY-HERE"
+  # API Token Authentication (StreamNative Cloud, DataStax Astra, self-hosted with tokens)
+  PULSAR_AUTH_TOKEN: "YOUR-API-KEY-HERE"
+  
+  # Add more credentials as needed (all become environment variables):
+  # PULSAR_OAUTH_CLIENT_ID: "your-client-id"
+  # PULSAR_OAUTH_CLIENT_SECRET: "your-client-secret"
+  # PULSAR_SASL_USERNAME: "admin"
+  # PULSAR_SASL_PASSWORD: "admin-secret"
+  # PULSAR_OPERATION_TIMEOUT_MS: "30000"
