--- a/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
+++ b/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
@@ -12,6 +12,8 @@ data:
             serviceUrl: "insert pulsar+ssl:// ...." # brokerServiceUrl
             authPluginClassName: org.apache.pulsar.client.impl.auth.AuthenticationToken
             authParams: "${PULSAR_AUTH_TOKEN}"
+            # operationTimeoutMs: "${PULSAR_OPERATION_TIMEOUT_MS}"
+            # connectionTimeoutMs: "${PULSAR_CONNECTION_TIMEOUT_MS}"
         consumer:  # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-consumer
           enabled: true
           consumerConfig: 
@@ -21,4 +23,6 @@ data:
           adminConfig: # Accepts the same key-value pair configurations as pulsar client: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
             serviceUrl: "insert pulsar+ssl:// ...." # brokerServiceUrl
             authPluginClassName: org.apache.pulsar.client.impl.auth.AuthenticationToken
-            authParams: "${PULSAR_AUTH_TOKEN}" 
+            authParams: "${PULSAR_AUTH_TOKEN}"
+            # operationTimeoutMs: "${PULSAR_OPERATION_TIMEOUT_MS}"
+            # connectionTimeoutMs: "${PULSAR_CONNECTION_TIMEOUT_MS}" 
