--- a/docs/sink/byte-array/manifests/api-key/byte-arr-producer-secret.yaml
+++ b/docs/sink/byte-array/manifests/api-key/byte-arr-producer-secret.yaml
@@ -7,10 +7,6 @@ type: Opaque
 stringData:
   # API Token Authentication (StreamNative Cloud, DataStax Astra, self-hosted with tokens)
   PULSAR_AUTH_TOKEN: "YOUR-API-KEY-HERE"
-  
-  # Add more credentials as needed (all become environment variables):
-  # PULSAR_OAUTH_CLIENT_ID: "your-client-id"
-  # PULSAR_OAUTH_CLIENT_SECRET: "your-client-secret"
-  # PULSAR_SASL_USERNAME: "admin"
-  # PULSAR_SASL_PASSWORD: "admin-secret"
-  # PULSAR_OPERATION_TIMEOUT_MS: "30000"
+
+  # Example: OAuth2 client secret
+  # PULSAR_OAUTH_CLIENT_SECRET: "your-oauth-client-secret"
