--- a/docs/source/byte-array/manifests/api-key/byte-arr-consumer-secret.yaml
+++ b/docs/source/byte-array/manifests/api-key/byte-arr-consumer-secret.yaml
@@ -9,8 +9,5 @@ stringData:
   # API Token Authentication (StreamNative Cloud, DataStax Astra, self-hosted with tokens)
   PULSAR_AUTH_TOKEN: "YOUR-API-KEY-HERE"
   
-  # Add more credentials as needed (all become environment variables):
-  # PULSAR_OAUTH_CLIENT_ID: "your-client-id"
-  # PULSAR_OAUTH_CLIENT_SECRET: "your-client-secret"
-  # PULSAR_SASL_USERNAME: "admin"
-  # PULSAR_SASL_PASSWORD: "admin-secret"
+  # Example: OAuth2 client secret
+  # PULSAR_OAUTH_CLIENT_SECRET: "your-oauth-client-secret"
