--- a/docs/sink/byte-array/manifests/api-key/byte-arr-producer-pipeline.yaml
+++ b/docs/sink/byte-array/manifests/api-key/byte-arr-producer-pipeline.yaml
@@ -24,6 +24,9 @@ spec:
             image: apache-pulsar-java:v0.3.0 # TO DO: Replace with quay.io link
             args: [ "--spring.config.location=file:/conf/application.yml" ] # Use external configuration file 
             imagePullPolicy: Never
+            envFrom:
+              - secretRef:
+                  name: pulsar-producer-auth-secret  # All secret keys injected as env vars
             volumeMounts:
               - name: pulsar-config-volume
                 mountPath: /conf
