--- a/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
+++ b/docs/source/byte-array/manifests/api-key/byte-arr-consumer-config.yaml
@@ -11,7 +11,8 @@ data:
           clientConfig:
             serviceUrl: "insert pulsar+ssl:// ...." # brokerServiceUrl
             authPluginClassName: org.apache.pulsar.client.impl.auth.AuthenticationToken
-            authParams: "insert key" # add API key here
+            authParams: "${PULSAR_AUTH_TOKEN}"
+            # Example: OAuth2 - authParams: "${PULSAR_OAUTH_CLIENT_SECRET}"
         consumer:  # see here for all configurations: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-consumer
           enabled: true
           consumerConfig: 
@@ -21,4 +22,5 @@ data:
           adminConfig: # Accepts the same key-value pair configurations as pulsar client: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
             serviceUrl: "insert pulsar+ssl:// ...." # brokerServiceUrl
             authPluginClassName: org.apache.pulsar.client.impl.auth.AuthenticationToken
-            authParams: "insert key" # add API key here
+            authParams: "${PULSAR_AUTH_TOKEN}"
+            # Example: OAuth2 - authParams: "${PULSAR_OAUTH_CLIENT_SECRET}" 
