--- a/docs/sink/byte-array/manifests/api-key/byte-arr-producer-config.yaml
+++ b/docs/sink/byte-array/manifests/api-key/byte-arr-producer-config.yaml
@@ -17,3 +17,9 @@ data:
           enabled: true
           producerConfig: 
             topicName: "persistent://public/default/test-topic"
+        admin: 
+          adminConfig: # Accepts the same key-value pair configurations as pulsar client: https://pulsar.apache.org/reference/#/4.0.x/client/client-configuration-client
+            serviceUrl: "insert pulsar+ssl:// ...." # brokerServiceUrl
+            authPluginClassName: org.apache.pulsar.client.impl.auth.AuthenticationToken
+            authParams: "${PULSAR_AUTH_TOKEN}"
+            # Example: OAuth2 - authParams: "${PULSAR_OAUTH_CLIENT_SECRET}"
